namespace RallyBuilder.Models;
public enum Level {
    NA,
    Begynder,
    Oevet,
    Ekspert,
    Champion
}